# budgey

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: budgets.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  budget.py
backend/app/schemas/: __init__.py  budget.py
frontend/: Dockerfile  README.md  package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.css
frontend/src/routes/: +layout.svelte  +page.svelte
sync/: Dockerfile  README.md  pyproject.toml  requirements.txt
sync/src/: main.py
sync/src/services/: __init__.py  db_service.py  ynab_service.py
