[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend service for Budgey"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.0"
uvicorn = "0.27.1"
sqlalchemy = "2.0.27"
psycopg2-binary = "2.9.9"
pydantic = "2.5.2"  # Using an older version that's compatible with Python 3.12
python-dotenv = "1.0.0"
asyncpg = "0.29.0"
alembic = "1.13.1"
httpx = "0.26.0"
python-multipart = "0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"